"if else | control flow"

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
 
 <h2>{{name}}</h2> -->
 
-
+<!-- 
 <h2>Get and Set Input field value</h2>
 <h1>UserName: {{displayName}}</h1>
 
@@ -48,4 +48,59 @@
 <h1>Email: {{email}}</h1>
 <input type="text" value="{{email}}" placeholder="Enter Your Email" #emailFiled> 
 <button (click)="getEmail(emailFiled.value)" >Get Email</button>
-<button (click)="setEmail(                                                          )">Set Email</button>
+<button (click)="setEmail(                                                          )">Set Email</button> -->
+
+
+
+<h1>If Else | Control flow</h1>
+<!-- 
+<button (click)="hide()">Hide div</button> <br>
+<button (click)="showBtn()">Show Div</button>
+<button (click)="toggle()">toggle</button>
+
+@if (display) {
+  <div style="width: 100px; height: 100px; background-color: green;">
+  
+  </div>
+}
+
+<hr>
+<br>
+<br>
+<button (click)="toggleTwo()">{{toggleDiv? 'show red div':'show green div'}}</button>
+<br>
+<br>
+@if (toggleDiv) {
+  <div style="width: 100px; height: 100px; background-color: green;">
+  
+  </div>
+}
+@else {
+  <div style="width: 100px; height: 100px; background-color: red;">
+  
+  </div>
+} -->
+
+
+
+<button (click)="handleColor(1)">red</button>
+<button (click)="handleColor(2)">blue</button>
+<button (click)="handleColor(3)">green</button>
+<button (click)="handleColor(10)">black</button>
+<input type="text" (input)="handleInput($event)" placeholder="enter a color number">
+
+
+
+@if (color==1) {
+  <div style="background-color: red; width: 100px; height: 100px;"></div>
+}
+@else if (color==2) {
+  <div style="background-color: blue; width: 100px; height: 100px;"></div>
+  
+}
+@else if (color==3) {
+  <div style="background-color: green; width: 100px; height: 100px;"></div>
+}
+@else{
+  <div style="background-color: black; width: 100px; height: 100px;"></div>
+}
